Made navbar login active and changed minor css to prevent overlapping

--- a/app/static/global.css
+++ b/app/static/global.css
@@ -10,7 +10,7 @@ body {
 
 .login-container {
     width: 100%;
-    height: 75vh;
+    min-height: 75vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
